--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,12 @@
       "options": {
         "tabWidth": 2
       }
+    },
+    {
+      "files": ["*.html"],
+      "options": {
+        "tabWidth": 4
+      }
     }
   ]
 }
