--- a/config.yaml
+++ b/config.yaml
@@ -13,7 +13,7 @@ params:
 
   ShowReadingTime: true
   ShowBreadCrumbs: true
-  ShowPostNavLinks: false
+  ShowPostNavLinks: true
   ShowWordCount: false
   ShowCodeCopyButtons: true
   ShowShareButtons: false
@@ -60,6 +60,12 @@ params:
   #   minMatchCharLength: 0
   #   limit: 10 # refer: https://www.fusejs.io/api/methods.html#search
   #   keys: ["title", "permalink", "summary", "content"]
+
+pygmentsUseClasses: true
+markup:
+  highlight:
+    noClasses: false
+    lineNos: true
 
 menu:
   main:
