--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,7 @@ params:
 
   disableScrollToTop: false
   defaultTheme: auto
+  math: true
 
   ShowReadingTime: true
   ShowBreadCrumbs: true
@@ -66,6 +67,19 @@ markup:
   highlight:
     noClasses: false
     lineNos: true
+  goldmark:
+    extensions:
+      passthrough:
+        delimiters:
+          block:
+            - - \[
+              - \]
+            - - $$
+              - $$
+          inline:
+            - - \(
+              - \)
+        enable: true
 
 menu:
   main:
